# dota2-tracker-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/api/opendota/: opendota.py
src/bot/: bot.py
src/bot/handlers/: commands.py
